--- a/SweetTreats.html
+++ b/SweetTreats.html
@@ -29,12 +29,11 @@
                 <li class="nav-item text-nowrap"><a class="nav-link" href="#">Suggest a Spot  <i class="fas fa-map-marker-alt" ></i></a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Blog  <i class="far fa-comment-alt"></i></a></li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-nowrap" href="#" id="navbardrop" data-toggle="dropdown">
-        Cra<span class="nav_ve font-weight-bold">Ve</span> Where   <i class="far fa-compass"></i></a>
+                    <a class="nav-link dropdown-toggle" href="#" id="menu" data-toggle="dropdown">Menu <i class="far fa-compass"></i></a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item font-weight-bold">CraVe LDN</a>
-                        <a class="dropdown-item disabled">CraVe NYC</a>
-                        <a class="dropdown-item disabled">CraVe TKY</a>
+                        <a class="dropdown-item active">Sweet Treats</a>
+                        <a class="dropdown-item">Fast Food</a>
+                        <a class="dropdown-item">World Food</a>
                     </div>
                 </li>
             </ul>
@@ -60,23 +59,24 @@
                 <div class="container bg-light border rounded shadow my-2"> Map </div>
             </div>
             <div class="col-lg-3 col-md-12 " id="sidebar">
-                    <div class="container my-2 rounded border RecommendStyle" id="recommended">
+                <div class="container my-2 rounded border RecommendStyle" id="recommended">
                     <h4 class="text-center pt-2 font-weight-bold sidebarHeader mb-1">Star Eat of the Week <i class="far fa-star fa-xs fa-spin"></i></h4>
+                    <h6 class="card-subtitle text-center mb-1">As chosen by Hannah</h6>
                     <div class="row no-gutters align-items-center">
-                        <div class="col-lg-12 col-sm-6 col-6" >
+                        <div class="col-lg-12 col-sm-6 col-6">
                             <div id="StarEatSlideshow" class="carousel slide" data-ride="carousel" data-intereval="3000">
                                 <div class="carousel-inner">
                                     <div class="carousel-item  active">
-                                        <img class="d-block w-100 p-2 img-fluid" src="img/fbw1.jpg" alt="fed by water front">
+                                        <img class="d-block w-70 p-2 img-fluid" src="img/fbw1.jpg" alt="fed by water front">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block w-100 p-2 img-fluid" src="img/fbw3.jpg" alt="fed by water inside">
+                                        <img class="d-block w-70 p-2 img-fluid" src="img/fbw3.jpg" alt="fed by water inside">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block w-100 p-2 img-fluid" src="img/fbw2.jpg" alt="fed by water food">
+                                        <img class="d-block w-70 p-2 img-fluid" src="img/fbw2.jpg" alt="fed by water food">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block w-100 p-2 img-fluid" src="img/fbw4.jpg" alt="fed by water food">
+                                        <img class="d-block w-70 p-2 img-fluid" src="img/fbw4.jpg" alt="fed by water food">
                                     </div>
                                 </div>
                             </div>
@@ -89,65 +89,67 @@
                         </div>
                     </div>
                 </div>
-                    <div class="container my-2 rounded border" id="newsletter">
-                    <h4 class="text-center pt-2 font-weight-bold sidebarHeader mb-1">Fear of Missing Out?</h4>
+                <div class="container my-2 rounded border NewsletterStyle" id="newsletter">
+                    <h4 class="text-center pt-2 font-weight-bold sidebarHeader mb-1">Fear of Missing Out?<i class="far fa-paper-plane"></i></h4>
                     <h6 class="card-subtitle text-center mb-1">Sign up to our newsletter!</h6>
-                    <div class="row align-items-center">
-                        <div class="col-lg-12 col-sm-4 col-4">
-                            <img class="d-block w-100 h-100" src="img/newsletter.gif" alt="hangry bois" style="">
+                    <div class="row align-items-center no-gutters">
+                        <div class="col-lg-12 col-sm-6 col-6 fill">
+                            <img class="d-block w-70 p-2 img-fluid" src="img/newsletter.gif" alt="hangry pandy boi" style="">
                         </div>
-                        <div class="col-lg-12 col-sm-8 col-8 colorme2">
-                           Hey Crave,
+                        <div class="col-lg-12 col-sm-6 col-6">
                             <form action="" method="">
                                 <div>
-                                    <label for="email"> Write to me at</label>
-                                    <input type="email" required id="email">
+                                    <label for="question"> My email address is</label>
+                                    <input type="email" id="email" placeholder="fedmeplz@ritenow.co.uk" style="width:100%" required>
                                 </div>
                                 <div>
-                                    <label for="mychoices" class="d-lg-block d-inline"> About</label>
+                                    <label for="question" class="d-block"> I'm interested in</label>
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="checkbox" id="sweetreats" value="sweettreatsyes">
+                                        <input class="form-check-input" type="checkbox" id="sweetreats" value="sweettreatsyes" name="sendme">
                                         <label class="form-check-label" for="sweetreats">Sweet Treats</label>
                                     </div>
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="checkbox" id="fastfood" value="fastfoodyes">
+                                        <input class="form-check-input" type="checkbox" id="fastfood" value="fastfoodyes" name="sendme">
                                         <label class="form-check-label" for="fastfood">Fast Food</label>
                                     </div>
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="checkbox" id="worldfood" value="worldfoodyes">
+                                        <input class="form-check-input" type="checkbox" id="worldfood" value="worldfoodyes" name="sendme">
                                         <label class="form-check-label" for="worldfood">World Food</label>
                                     </div>
                                 </div>
                                 <div>
-                                    <label for="regularity" class="d-lg-block d-inline">Every</label>
+                                    <label for="question" class="d-block">Send an email every</label>
                                     <div class="form-check form-check-inline">
-                                      <input class="form-check-input" type="radio" id="regularity" value="week" name="time">
-                                      <label class="form-check-label" for="regularity">
+                                        <input class="form-check-input" type="radio" id="regularity" value="week" name="time">
+                                        <label class="form-check-label" for="regularity">
                                         Week
                                       </label>
                                     </div>
-                                     <div class="form-check form-check-inline">
-                                      <input class="form-check-input" type="radio" id="regularity" value="2week" name="time">
-                                      <label class="form-check-label" for="regularity">
-                                        Two Weeks
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" id="regularity" value="2week" name="time">
+                                        <label class="form-check-label" for="regularity">
+                                        Fortnight
                                       </label>
                                     </div>
                                     <div class="form-check form-check-inline">
-                                      <input class="form-check-input" type="radio" id="regularity" value="month" name="time">
-                                      <label class="form-check-label" for="regularity">
+                                        <input class="form-check-input" type="radio" id="regularity" value="month" name="time">
+                                        <label class="form-check-label" for="regularity">
                                         Month
                                       </label>
                                     </div>
                                 </div>
-                                <button type="submit"> Lets Go!</button>
+                                <button type="submit" class="btn my-2 ourButton2"> Submit!</button>
                             </form>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
     </div>
+    <footer class="text-center">
+        <div class="container-fluid"> <span class="footerStyle font-weight-bold">Made with <i class="fas fa-leaf fa-lg" style="color:#668427"></i>  by Hannah + Michelle // Made possible with <a class="img-responsive" href="https://www.codefirstgirls.org.uk/free-community-courses.html" target="_blank"><img src="img/cfg_logo.png" alt="CodeFirst:Girls" id="cfg_logo"></a></span>
+        </div>
+    </footer>
     <!--    Bootstrap JavaScript CDNs-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
