--- a/About.html
+++ b/About.html
@@ -1,13 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="aboutstylesheet.css">
+    <title>Om nom nom</title>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <!--Bootstrap_4-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!--Google Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Delius+Swash+Caps" rel="stylesheet">
+    <!--Font Awesome Icons-->
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
-    <title>About</title>
+    <!--Our Stylesheets-->
+    <link href="./stylesheets/consistencystylesheet.css" rel="stylesheet" type="text/css">
+    <link href="./stylesheets/aboutstylesheet.css" type="text/css" rel="stylesheet">
 </head>
-<body>
+<!--Navbar-->
+ <nav class="navbar navbar-expand-md navbar-light navStyling display">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"><span><i class="fas fa-cloud fa-4x cloudFloat"></i></span>
+  </button>
+        <!--navbar Menu-->
+        <div class="collapse navbar-collapse d-inline-flexflex-sm-column flex-wrap" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="index.html"><i class="fas fa-home fa-1x"></i></a></li>
+                <li class="nav-item text-nowrap"><a class="nav-link" href="#">Suggest a Spot  <i class="fas fa-map-marker-alt" ></i></a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Blog  <i class="far fa-comment-alt"></i></a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="menu" data-toggle="dropdown">Menu <i class="fas fa-utensils"></i></a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item nav-link" href="SweetTreats.html">Sweet Treats</a>
+                        <a class="dropdown-item nav-link" href="FastFood.html">Fast Food</a>
+                        <a class="dropdown-item nav-link" href="WorldFood.html">World Food</a>
+                    </div>
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto p-0 d-inline-flex">
+                <div class="socialbtns">
+                    <li><a class="nav-link " href="https://www.instagram.com/codefirstgirls/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                    <li><a class="nav-link" href="https://www.facebook.com/codefirstgirls/" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                    <li><a class="nav-link" href="https://twitter.com/CodeFirstGirls" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                </div>
+                <li class="nav-item"><a class="nav-link active" >About <i class="fas fa-heart" style="color:#EB5E55"></i></a></li>
+            </ul>
+        </div>
+    </nav>
+    <!--mainPage-->
  <div class="container">
   <div class="row info_1">
           <div class="col-lg-4">
@@ -22,14 +59,14 @@
              <p><center>
                  <details>
 							<summary>Hannah</summary>
-							<img class="rounded-circle img-fluid" src="images/hannah%20(1).jpg" alt="Hannah">
+							<img class="rounded-circle img-fluid" src="img/hannah%20(1).jpg" alt="Hannah">
 							<p>About Hannah</p>
 					</details>
                 </center>
                 <center>
                    <details>
 							<summary>Michelle</summary>
-							<img class="rounded-circle img-fluid" src="Images/Mich.jpg" alt="Michelle">
+							<img class="rounded-circle img-fluid" src="img/Mich.jpg" alt="Michelle">
 							<p>About Michelle</p>
 					</details>
          </center></p>
@@ -42,5 +79,13 @@
           </div>
         </div>
     </div>
-</body>
-</html>
+    <footer>
+        <div class="container-fluid"> <span class="footerStyle font-weight-bold">Made with  <i class="fas fa-leaf fa-lg" style="color:#668427"></i>  by Hannah + Michelle + Seraphina // Made possible with <a class="img-responsive" href="https://www.codefirstgirls.org.uk/free-community-courses.html" target="_blank"><img src="img/cfg_logo.png" alt="CodeFirst:Girls" id="cfg_logo"></a></span>
+        </div>
+    </footer>
+    <!--    Bootstrap JavaScript CDNs-->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+</body> </html>
+
