--- a/WorldFood.html
+++ b/WorldFood.html
@@ -72,22 +72,68 @@
                             var infowindow = new google.maps.InfoWindow();
                             var service = new google.maps.places.PlacesService(map);
 
-                            service.getDetails({
-                                placeId: 'ChIJkR3eo1cbdkgRMTeC2Ur-0-E'
-                            }, function(place, status) {
+                            var wfPlaces = [
+                [{
+                    placeId: 'ChIJw7IZm8McdkgRXzx6t5UPbi8'
+                }],
+                [{
+                    placeId: 'ChIJzwJpL5IcdkgRkySg-N9nny0'
+                }],
+                [{
+                    placeId: 'ChIJBW3yzvscdkgRo7FHtKX5K9Q'
+                }],
+                [{
+                    placeId: 'ChIJ9a8NHLAcdkgRtuswsdJU0UI'
+                }],
+                [{
+                    placeId: 'ChIJRTcqErocdkgRGNs2C5VLcTc'
+                }],
+                [{
+                    placeId: 'ChIJ-_EoA5MddkgR9Ex1TEbJsOw'
+                }],
+                [{
+                    placeId: 'ChIJWyH6QQ0ddkgRTMHUhmww7hY'
+                }],
+                [{
+                    placeId: 'ChIJ2cS7oRoddkgR0H9ZGggIx2'
+                }],
+                [{
+                    placeId: 'ChIJ89C8tbocdkgRTmgJv7FBu0Y'
+                }],
+                [{
+                    placeId: 'ChIJz6FOZh0ddkgRbKdi8pza5VM'
+                }],
+                [{
+                    placeId: 'ChIJS0zT35kHdkgRd0qPqDU66jM'
+                }],
+                [{
+                    placeId: 'ChIJuY8sNoOg2EcRY8lqS8jf40c'
+                }],
+                [{
+                    placeId: 'ChIJr34Mk9scdkgR0irkswZPrK8'
+                }],
+                [{
+                    placeId: 'ChIJaxWqk7UcdkgRjr3dwrPTj8I'
+                }]
+            ];
+
+                            for(var i=0; i < wfPlaces.length; i++){service.getDetails(wfPlaces[i][0]
+                            , function(place, status) {
                                 if (status === google.maps.places.PlacesServiceStatus.OK) {
                                     var marker = new google.maps.Marker({
                                         map: map,
                                         position: place.geometry.location
                                     });
+
                                     google.maps.event.addListener(marker, 'click', function() {
-                                        in0fowindow.setContent('<div><strong>' + place.name + '</strong><br>' +
+                                        infowindow.setContent('<div><strong>' + place.name + '</strong><br>' +
                                             'Place ID: ' + place.place_id + '<br>' +
                                             place.formatted_address + '</div>');
                                         infowindow.open(map, this);
                                     });
                                 }
                             });
+                        }
                         }
                     </script>
                 </div>
