--- a/SweetTreats.html
+++ b/SweetTreats.html
@@ -2,16 +2,22 @@
 <html lang="en"><head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
-    <title>Sweet Treats [CraVeLDN]</title>
+    <title>Sweet Treats</title>
     <!--Bootstrap_4-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Delius+Swash+Caps|Pacifico|Raleway" rel="stylesheet">
     <script src="//use.edgefonts.net/damion.js"></script>
     <!--Font Awesome Icons-->
-    <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
     <!--Our Stylesheets-->
-    <link href="./stylesheets/consistencystylesheet.css" rel="stylesheet" type="text/css"><link href="./stylesheets/STstylesheet.css" rel="stylesheet" type="text/css">
+    <link href="./stylesheets/consistencystylesheet.css" rel="stylesheet" type="text/css">
+    <link href="./stylesheets/STstylesheet.css" rel="stylesheet" type="text/css">
+    <script>
+        function signUp() {
+            document.getElementById("SignUp").src= "img/newsletteryay.gif";
+        }
+    </script>
 </head>
 
 <body class="gradient_bluepink_bkgrnd">
@@ -24,7 +30,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="index.html"><i class="fas fa-home fa-1x"></i></a></li>
                 <li class="nav-item text-nowrap"><a class="nav-link" href="#">Suggest a Spot  <i class="fas fa-map-marker-alt" ></i></a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Blog  <i class="far fa-comment-alt"></i></a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Blog  <i class="fas fa-comment-dots"></i></a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="menu" data-toggle="dropdown">Menu <i class="fas fa-utensils"></i></a>
                     <div class="dropdown-menu">
@@ -91,13 +97,13 @@
                     <h6 class="card-subtitle text-center mb-1">Sign up to our newsletter!</h6>
                     <div class="row align-items-center no-gutters">
                         <div class="col-lg-12 col-sm-6 col-6 fill">
-                            <img class="d-block w-70 p-2 img-fluid" src="img/newsletter.gif" alt="hangry pandy boi" style="">
+                            <img class="d-block w-70 p-2 img-fluid" src="img/newsletter.gif" alt="hangry pandy boi" id="SignUp">
                         </div>
                         <div class="col-lg-12 col-sm-6 col-6">
-                            <form action="" method="">
+                            <form>
                                 <div>
                                     <label for="question"> My email address is</label>
-                                    <input type="email" id="email" placeholder="fedmeplz@ritenow.co.uk" style="width:100%" required>
+                                    <input type="email" id="email" onclick="signUp()" placeholder="fedmeplz@ritenow.co.uk" style="width:100%" required>
                                 </div>
                                 <div>
                                     <label for="question" class="d-block"> I'm interested in</label>
@@ -144,12 +150,14 @@
         </div>
     </div>
     <footer class="text-center">
-        <div class="container-fluid"> <span class="footerStyle font-weight-bold">Made with <i class="fas fa-leaf fa-lg" style="color:#668427"></i>  by Hannah + Michelle + Seraphina // Made possible with <a class="img-responsive" href="https://www.codefirstgirls.org.uk/free-community-courses.html" target="_blank"><img src="img/cfg_logo.png" alt="CodeFirst:Girls" id="cfg_logo"></a></span>
+        <div class="container-fluid"> <span class="footerStyle font-weight-bold">Made with <i class="fas fa-seeling fa-lg" style="color:#668427"></i>  by Hannah + Michelle + Seraphina // Made possible with <a class="img-responsive" href="https://www.codefirstgirls.org.uk/free-community-courses.html" target="_blank"><img src="img/cfg_logo.png" alt="CodeFirst:Girls" id="cfg_logo"></a></span>
         </div>
     </footer>
     <!--    Bootstrap JavaScript CDNs-->
     <!--    Bootstrap JavaScript CDNs-->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
