--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Roboto+Slab|Delius+Swash+Caps" rel="stylesheet">
     <!--Font Awesome Icons-->
-    <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
     <!--Our Stylesheets-->
     <link href="./stylesheets/consistencystylesheet.css" rel="stylesheet" type="text/css">
     <link href="./stylesheets/indexstylesheet.css" type="text/css" rel="stylesheet">
@@ -28,7 +28,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item active"><a class="nav-link"><i class="fas fa-home fa-1x"></i></a></li>
                 <li class="nav-item text-nowrap"><a class="nav-link" href="#">Suggest a Spot  <i class="fas fa-map-marker-alt" ></i></a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Blog  <i class="far fa-comment-alt"></i></a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Blog  <i class="fas fa-comment-dots"></i></a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-nowrap" href="#" id="navbardrop" data-toggle="dropdown">
         Cra<span class="nav_ve font-weight-bold">Ve</span> Where   <i class="far fa-compass"></i></a>
@@ -95,11 +95,11 @@
     </div>
 
     <footer>
-        <div class="container-fluid"> <span class="footerStyle font-weight-bold">Made with  <i class="fas fa-leaf fa-lg" style="color:#668427"></i>  by Hannah + Michelle + Seraphina // Made possible with <a class="img-responsive" href="https://www.codefirstgirls.org.uk/free-community-courses.html" target="_blank"><img src="img/cfg_logo.png" alt="CodeFirst:Girls" id="cfg_logo"></a></span>
+        <div class="container-fluid"> <span class="footerStyle font-weight-bold">Made with  <i class="fas fa-seedling fa-lg" style="color:#668427"></i>  by Hannah + Michelle + Seraphina // Made possible with <a class="img-responsive" href="https://www.codefirstgirls.org.uk/free-community-courses.html" target="_blank"><img src="img/cfg_logo.png" alt="CodeFirst:Girls" id="cfg_logo"></a></span>
         </div>
     </footer>
     <!--    Our Javascript-->
-    <script src="../javascript/surpriseme.min.js"></script>
+    <script src="surpriseme.min.js"></script>
     <!--    Bootstrap JavaScript CDNs-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
