--- a/About.html
+++ b/About.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
-    <title>Om nom nom</title>
+    <title>About Us</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <!--Bootstrap_4-->
@@ -11,7 +11,7 @@
     <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Delius+Swash+Caps" rel="stylesheet">
     <!--Font Awesome Icons-->
-    <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
     <!--Our Stylesheets-->
     <link href="./stylesheets/consistencystylesheet.css" rel="stylesheet" type="text/css">
     <link href="./stylesheets/aboutstylesheet.css" type="text/css" rel="stylesheet">
@@ -26,7 +26,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="index.html"><i class="fas fa-home fa-1x"></i></a></li>
                 <li class="nav-item text-nowrap"><a class="nav-link" href="#">Suggest a Spot  <i class="fas fa-map-marker-alt" ></i></a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Blog  <i class="far fa-comment-alt"></i></a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Blog  <i class="fas fa-comment-dots"></i></a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="menu" data-toggle="dropdown">Menu <i class="fas fa-utensils"></i></a>
                     <div class="dropdown-menu">
@@ -79,7 +79,7 @@
         </div>
     </div>
     <footer class="text-center">
-        <div class="container-fluid"> <span class="footerStyle font-weight-bold">Made with  <i class="fas fa-leaf fa-lg" style="color:#668427"></i>  by Hannah + Michelle + Seraphina // Made possible with <a class="img-responsive" href="https://www.codefirstgirls.org.uk/free-community-courses.html" target="_blank"><img src="img/cfg_logo.png" alt="CodeFirst:Girls" id="cfg_logo"></a></span>
+        <div class="container-fluid"> <span class="footerStyle font-weight-bold">Made with  <i class="fas fa-seedling fa-lg" style="color:#668427"></i>  by Hannah + Michelle + Seraphina // Made possible with <a class="img-responsive" href="https://www.codefirstgirls.org.uk/free-community-courses.html" target="_blank"><img src="img/cfg_logo.png" alt="CodeFirst:Girls" id="cfg_logo"></a></span>
         </div>
     </footer>
     <!--    Bootstrap JavaScript CDNs-->
